# python

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  CHECKLIST_ENTREGA.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DOCKER_IMPLEMENTATION.md  Dockerfile  ENTREGA_RECLUTADOR.md  ERROR_HANDLING_IMPLEMENTATION.md  FINAL_VALIDATION_REPORT.md  INSTALLATION.md  Instrucciones_para_prueba_tecnica.md  Makefile  Prueba_Tecnica_Pyhon.md  README.md  USAGE_EXAMPLES.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.kiro/specs/prueba-tecnica-python/: design.md  requirements.md  tasks.md
backups/: .gitkeep
data/input/: .gitkeep
data/output/: .gitkeep
docker/: Dockerfile.api  Dockerfile.data-processor
scripts/: .gitkeep  cli_demo.py  create_normalized_schema.sql  demo_api.py  demo_data_extractor.py  demo_data_loader.py  demo_data_transformer.py  demo_number_set.py  demo_reporting_views.py  demo_schema_creation.py  deploy.sh  docker-manage.sh  init_database.py  init_db.sql  run_api.py  setup.sh  validate-docker.sh
secrets/: .gitkeep
src/: config.py  exceptions.py  logging_config.py  validation.py
src/api/: __init__.py  main.py  number_set.py
src/data_processing/: __init__.py  extractor.py  loader.py  transformer.py
src/database/: __init__.py  connection.py  manager.py  models.py  transactions.py
tests/integration/: README.md  conftest.py  fixtures.py  run_integration_tests.py  test_api_integration.py  test_api_workflow.py  test_cli_integration.py  test_complete_pipeline.py  test_data_loader_integration.py  test_error_scenarios.py
tests/integration/reports/: junit.xml
tests/unit/: test_api_endpoints.py  test_cli_demo.py  test_data_extractor.py  test_data_loader.py  test_data_transformer.py  test_database_connection.py  test_database_manager.py  test_error_handling.py  test_number_set.py
